objects/CustomerInsight__c/CustomerInsight__c.object-meta.xml
<CustomObject>
    <label>CustomerInsight</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>CustomerInsight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomerInsights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>