objects/CustomerInsight__c/fields/Insight__c.field-meta.xml
<CustomField>
    <fullName>Insight__c</fullName>
    <label>Insight</label>
    <length>100</length>
    <type>Text</type>
</CustomField>