objects/CustomerInsight__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>CustomerInsights</relationshipLabel>
    <relationshipName>CustomerInsights</relationshipName>
    <type>Lookup</type>
</CustomField>